# connecthub

./: .gitignore  LICENSE  README.md  SETUP.md
connecthub-backend/: .env.example  .gitignore  Dockerfile  Dockerfile.chat  README.md  chatserver.py  database.py  main.py  pyproject.toml  run.py
connecthub-backend/api/routes/: auth.py  chat.py  discovery.py  matches.py  settings.py  users.py
connecthub-backend/auth/: middleware.py  session.py
connecthub-backend/mock_data/: likes.json  matches.json  messages.json  settings.json  users.json
connecthub-backend/schemas/: chat.py  like.py  match.py  settings.py  user.py
connecthub-frontend/: .env.example  package-lock.json  package.json  vite.config.ts
connecthub-frontend/src/: App.css  App.tsx
connecthub-frontend/src/components/: ActionAnimation.css  AgeRangeSlider.tsx  BottomNav.tsx  ChatRoom.tsx  DiscoverView.tsx  DistanceSlider.tsx  LandingPage.tsx  LoginForm.tsx  MatchList.tsx  MatchModal.css  MatchModal.tsx  ProfileView.tsx  RegisterForm.tsx  SettingsView.tsx  SetupView.tsx  SwipeCard.tsx  UserDetailModal.tsx  auth.css
connecthub-frontend/src/data/: mockTelegram.ts
connecthub-frontend/src/hooks/: useSocketIO.ts
connecthub-frontend/src/services/: apiService.ts  authService.ts  chatService.ts  discoveryService.ts  matchService.ts  mockService.ts  settingsService.ts  setupService.ts
connecthub-frontend/src/store/: index.ts  userSlice.ts
connecthub-frontend/src/types/: api.ts  chat.ts  like.ts  (+5 more)
connecthub-infra/: .env.example  docker-compose.yml  init-letsencrypt.sh  init.sql  nginx.conf  renew-ssl.sh
(+1 files in other folders)
